Changes since KSpread 2.2
=========================

Features
--------
Manual page breaks.

Enhancements
------------
Display status bar messages instead of notifications (in a few cases).

Bug Fixes
---------
Fix the dependency calculation after region changes and after sheet additions/removals.
Fix text/background/border color actions by using KoColorPopupAction (if pigment is built).
Fix map/sheet protection action.
208868: Fix action triggering on selection changes, which resulted in style changes.
Fix cell removal by shifting cells up.
Fix column/row insertion/removal undo/redo for non-contiguous selections.
Fix special paste operations (!= OverWrite) do not undo properly.
Fix undo of pasting styles.
Fix undo of pasting comments.
Fix crash in cell insertion/removal dialog.
Fix the cell shift command and its cell repainting for non-contiguous selections.
Properly update the canvas on changing sheets.

Developer-Visible Only
----------------------
Improved the function module loading/unloading. (@PACKAGERS: plugin interface changed!)
Implement models for Map/Sheet/Region.




Changes for KSpread 1.5 Beta 1
==============================

Features
--------
Non-contiguous selection
Rewritten dependency handling
Embedded picture/image inside workbook
Improved and faster formula calculation
Manual line break (wish #9881)
Syntax highlight and function autocomplete for formula editing
Custom sheet selection and ordering in print dialog

Enhancements
------------
QWhatsThis help is available to various dialogs
Updated dialog screenshot in the handbook
Default autofill increment is set to 1 if only one cell is selected
Sum button automatically selects a suitable cell range
Percent operator in formula (wish #101217)
Improved zoomed printouts (bug #115879)
Use standard KDE font dialog in cell format dialog (bug #116991)
Faster redraw of merged cells (bug #118248)

Bug Fixes
---------
#120234: Freeze on circular reference
#120232: Strange behaviour on creating new file